# eiciel

./: meson.build  meson_options.txt
img/: install_icons.sh
